@startuml
!pragma layout smetana
!include _estilo.iuml
hide empty description
title CU-08 Consultar Tecnico Responsable
state "Cargando" as Carga
Carga : entry / findAll() : List<TechnicalSupervisor>
state "Lista mostrada" as Lista
Lista : entry / tableView.getItems().setAll(technicals)
state "Sin registros" as Vacio
Vacio : entry / showAlert("Sin registros", INFORMATION)
state "Error" as Error
Error : entry / showAlert("Error de servicio", ERROR)
[*] --> Carga
Carga --> Lista : [hay registros]
Carga --> Vacio : [lista vacia]
Carga --> Error : [ServiceException]
Lista --> [*]
Vacio --> [*]
Error --> [*]
@enduml
